<resources>
    <string name="app_name">AndroidIsAllAbout</string>
    <string name="Dispaly">display</string>
    <string name="Download">download</string>

    <string name="u_login">Enter User Name</string>
    <string name="u_pass">Enter Password</string>
    <string name="u_signin">SIGNIN</string>
    <string name="u_fpass">FORGET PASSWORD</string>
    <string name="u_savecnt">DATABASE</string>
    <string name="u_save">SAVE</string>
    <string name="u_true">USERNAME VALID</string>
    <string name="u_true_pass">PASSWORD VALID</string>
    <string name="showlist">Show List</string>
    <string name="check">CHECK</string>
    <string name="save">SAVE</string>
    <string name="title">EMPLOYEE DETAILS FORM</string>
    <string name="name">Name Of Employee</string>
    <string name="company">Company Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthdate">DateOfBirth</string>
    <string name="dob">Enter B\'date</string>
    <string name="salary">Enter Your Salary</string>
    <string name="save1">SAVE DETAILS</string>
    <string name="show_details">Show List</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>
