<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SharedPrefActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="262dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="REGISTRATION"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/etxt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/u_login"
                android:inputType="text" />

            <EditText
                android:id="@+id/etxt_passwrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/u_pass"
                android:inputType="numberPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/u_signin" />

                <Button
                    android:id="@+id/btn_fpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/u_fpass" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_savecnt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/u_savecnt" />

            <Button
                android:id="@+id/btn_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/showlist" />

        </LinearLayout>



    </ScrollView>
</android.support.constraint.ConstraintLayout>